kubernetes/services/myrctf-monitoring/resources/cockpit-postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myrctf-monitoring
  labels:
    exposure: public
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
